--- a/src/public/css/globalstyles.css
+++ b/src/public/css/globalstyles.css
@@ -220,12 +220,6 @@ a:focus-visible {
     text-decoration: underline;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
 .visually-hidden {
     position: absolute !important;
     width: 1px;
