--- a/src/public/css/modules.css
+++ b/src/public/css/modules.css
@@ -17,7 +17,7 @@
 .module--box-shadow-bg-white {
     display: grid;
     background-color: var(--bg-module-white);
-    padding: 1.5rem;
+    /* padding: 1.5rem; */
     border-radius: 0.8rem;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
 }
@@ -25,7 +25,7 @@
 .module--bg-white {
     display: grid;
     background-color: var(--bg-module-white);
-    padding: 1.5rem;
+    /* padding: 1.5rem; */
     border-radius: 0.8rem;
 }
 
